--- a/package.json
+++ b/package.json
@@ -12,16 +12,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
+    "@angular/animations": "^5.2.8",
+    "@angular/cdk": "github:angular/cdk-builds",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "github:angular/material2-builds",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.1",
+    "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.0",
+    "mongoose": "^5.0.10",
+    "ngx-cookie-service": "^1.0.10",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
